--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1064,24 +1064,6 @@
 <p><strong>Search keywords:</strong> <code>camera door doorbell smart household wifi</code><br>
 <strong>Search link:</strong> <a href="https://www.bestbuy.com/product/ring-battery-doorbell-plus-smart-wifi-video-doorbell-battery-operated-with-head-to-toe-view-satin-nickel/J39HW6P9S2/sku/6531758?extStoreId=1189">Best Buy - Ring Wifi Doorbell</a></p>
 <p><strong>Voice of the Customer → User Needs</strong></p>
-<p>| Statements (summarized quotes) | User Need Statement | Explicit/Latent | Meta Need |
-| “Eco Temps kick in when I’m away and my bill dropped.” | 1) Automatically reduce energy use when home is unoccupied; 2) Make Eco settings easy to enable and trust. | Explicit (positive) | Energy Savings |
-| “I can change the temp and edit schedules in the Google Home app from anywhere.” | 1) Reliable remote control; 2) Fast, tweakable scheduling in one place. | Explicit (positive) | Ease of Use |
-| “Voice control works—‘Hey Google, set it to 72.’” | 1) Hands-free temperature changes via voice; 2) Consistent assistant responses without lag. | Explicit (positive) | Smart-Home Integration |
-| “It warned me when something looked off with my HVAC and reminded me about filters.” | 1) Proactive system monitoring with timely alerts; 2) Adjustable maintenance reminders. | Explicit (positive) | Reliability &amp; Maintenance |
-| “Looks clean; the Snow finish blends in and the display is easy to read.” | 1) Minimal, modern design that fits decor; 2) Readable screen from typical viewing distance. | Explicit (positive) | Aesthetics |
-| “ENERGY STAR certified—nice to know it’s efficient.” | 1) Verified efficiency to reduce waste; 2) Clear guidance on energy programs/rebates where available. | Explicit (positive) | Energy Efficiency |
-| “My setup needed a C-wire/Power Connector—battery kept dipping without it.” | 1) Clear guidance on when extra power is required; 2) Stable power across diverse HVAC systems. | Explicit (negative) | Compatibility &amp; Power |
-| “Not compatible with high-voltage (line-voltage) systems in older homes.” | 1) Transparent compatibility limits up front; 2) Suggested alternatives or adapters when unsupported. | Explicit (negative) | System Compatibility |
-| “You need a Google account and working Wi-Fi for the smart stuff.” | 1) Transparent prerequisites (account/Wi-Fi) before purchase; 2) Reliable connectivity once set up. | Explicit (negative) | Onboarding &amp; Connectivity |
-| “It uses AAA batteries, so I’ll have to replace them occasionally.” | 1) Reasonable battery life with clear low-battery alerts; 2) Simple, tool-free battery replacement. | Explicit (negative) | Power Convenience |</p>
-<p><strong>Category / Meta-Needs:</strong><br>
-- <strong>Home Monitoring and Security</strong> — <em>See/communicate with visitors, receive dependable alerts, capture package deliveries.</em>
-- <strong>Ease of Use and Power</strong> — <em>Simple setup with strong battery performance in real world conditions.</em></p>
-<h3 id="5-programmable-hvac-monitoring-thermostat-walmart">5) Programmable HVAC Monitoring Thermostat - Walmart</h3>
-<p><strong>Search keywords:</strong> <code>hvac thermostat smart household programmable</code><br>
-<strong>Search link:</strong> <a href="https://www.walmart.com/ip/Google-Nest-Thermostat-Programmable-Smart-Thermostat-for-Home-Snow/415911305?wmlspartner=wlpa&amp;selectedSellerId=102477550">Google Nest Thermostat</a></p>
-<p><strong>Voice of the Customer → User Needs</strong></p>
 <table>
 <thead>
 <tr>
@@ -1093,61 +1075,85 @@
 </thead>
 <tbody>
 <tr>
-<td>“It actually helped lower my bill—Eco Temps kick in when I leave.”</td>
-<td>The product reduces energy costs with presence-based Eco temperatures and energy-saving features.</td>
-<td>Explicit</td>
+<td>“Eco Temps kick in when I’m away and my bill dropped.”</td>
+<td>1) Automatically reduce energy use when home is unoccupied; 2) Make Eco settings easy to enable and trust.</td>
+<td>Explicit (positive)</td>
 <td>Energy Savings</td>
 </tr>
 <tr>
-<td>“I can set and tweak schedules right in the Google Home app from anywhere.”</td>
-<td>The product allows remote control and easy scheduling via the Google Home app (Quick Schedule).</td>
-<td>Explicit</td>
+<td>“I can change the temp and edit schedules in the Google Home app from anywhere.”</td>
+<td>1) Reliable remote control; 2) Fast, tweakable scheduling in one place.</td>
+<td>Explicit (positive)</td>
 <td>Ease of Use</td>
 </tr>
 <tr>
-<td>“I just say the word to change the temp—works with Google Assistant/Alexa.”</td>
-<td>The product supports reliable voice control across major smart-home assistants.</td>
-<td>Explicit</td>
-<td>Smart Home Integration</td>
+<td>“Voice control works—‘Hey Google, set it to 72.’”</td>
+<td>1) Hands-free temperature changes via voice; 2) Consistent assistant responses without lag.</td>
+<td>Explicit (positive)</td>
+<td>Smart-Home Integration</td>
 </tr>
 <tr>
-<td>“It alerts me if something seems off with my HVAC and reminds me to change filters.”</td>
-<td>The product provides HVAC monitoring and maintenance reminders to prevent issues.</td>
-<td>Explicit</td>
+<td>“It warned me when something looked off with my HVAC and reminded me about filters.”</td>
+<td>1) Proactive system monitoring with timely alerts; 2) Adjustable maintenance reminders.</td>
+<td>Explicit (positive)</td>
 <td>Reliability &amp; Maintenance</td>
 </tr>
 <tr>
-<td>“Install was straightforward, and the app checked my system for compatibility.”</td>
-<td>The product offers simple, guided setup and a compatibility check to avoid surprises.</td>
-<td>Explicit</td>
-<td>Onboarding</td>
-</tr>
-<tr>
-<td>“Looks clean and modern; the display is easy to read.”</td>
-<td>The product has a minimal, readable display and aesthetic design that blends into the home.</td>
-<td>Explicit</td>
+<td>“Looks clean; the Snow finish blends in and the display is easy to read.”</td>
+<td>1) Minimal, modern design that fits decor; 2) Readable screen from typical viewing distance.</td>
+<td>Explicit (positive)</td>
 <td>Aesthetics</td>
 </tr>
 <tr>
-<td>“Runs fine on my system, but some setups really need a C-wire to avoid battery problems.”</td>
-<td>The product should work across systems and clearly guide when a C-wire is required to ensure stable power.</td>
-<td>Latent</td>
-<td>Compatibility &amp; Power</td>
-</tr>
-<tr>
 <td>“ENERGY STAR certified—nice to know it’s efficient.”</td>
-<td>The product meets ENERGY STAR efficiency standards.</td>
-<td>Explicit</td>
+<td>1) Verified efficiency to reduce waste; 2) Clear guidance on energy programs/rebates where available.</td>
+<td>Explicit (positive)</td>
 <td>Energy Efficiency</td>
 </tr>
 <tr>
-<td>“After hearing support news on older models, I want clear long-term software support.”</td>
-<td>The product should provide transparent, durable software support and feature longevity.</td>
-<td>Latent</td>
-<td>Longevity &amp; Support</td>
+<td>“My setup needed a C-wire/Power Connector—battery kept dipping without it.”</td>
+<td>1) Clear guidance on when extra power is required; 2) Stable power across diverse HVAC systems.</td>
+<td>Explicit (negative)</td>
+<td>Compatibility &amp; Power</td>
+</tr>
+<tr>
+<td>“Not compatible with high-voltage (line-voltage) systems in older homes.”</td>
+<td>1) Transparent compatibility limits up front; 2) Suggested alternatives or adapters when unsupported.</td>
+<td>Explicit (negative)</td>
+<td>System Compatibility</td>
+</tr>
+<tr>
+<td>“You need a Google account and working Wi-Fi for the smart stuff.”</td>
+<td>1) Transparent prerequisites (account/Wi-Fi) before purchase; 2) Reliable connectivity once set up.</td>
+<td>Explicit (negative)</td>
+<td>Onboarding &amp; Connectivity</td>
+</tr>
+<tr>
+<td>“It uses AAA batteries, so I’ll have to replace them occasionally.”</td>
+<td>1) Reasonable battery life with clear low-battery alerts; 2) Simple, tool-free battery replacement.</td>
+<td>Explicit (negative)</td>
+<td>Power Convenience</td>
 </tr>
 </tbody>
 </table>
+<p><strong>Category / Meta-Needs:</strong><br>
+- <strong>Home Monitoring and Security</strong> — <em>See/communicate with visitors, receive dependable alerts, capture package deliveries.</em>
+- <strong>Ease of Use and Power</strong> — <em>Simple setup with strong battery performance in real world conditions.</em></p>
+<h3 id="5-programmable-hvac-monitoring-thermostat-walmart">5) Programmable HVAC Monitoring Thermostat - Walmart</h3>
+<p><strong>Search keywords:</strong> <code>hvac thermostat smart household programmable</code><br>
+<strong>Search link:</strong> <a href="https://www.walmart.com/ip/Google-Nest-Thermostat-Programmable-Smart-Thermostat-for-Home-Snow/415911305?wmlspartner=wlpa&amp;selectedSellerId=102477550">Google Nest Thermostat</a></p>
+<p><strong>Voice of the Customer → User Needs</strong></p>
+<p>| Statements (summarized quotes) | User Need Statement | Explicit/Latent | Meta Need |
+| “Eco Temps kick in when I’m away and my bill dropped.” | 1) Automatically reduce energy use when home is unoccupied; 2) Make Eco settings easy to enable and trust. | Explicit (positive) | Energy Savings |
+| “I can change the temp and edit schedules in the Google Home app from anywhere.” | 1) Reliable remote control; 2) Fast, tweakable scheduling in one place. | Explicit (positive) | Ease of Use |
+| “Voice control works—‘Hey Google, set it to 72.’” | 1) Hands-free temperature changes via voice; 2) Consistent assistant responses without lag. | Explicit (positive) | Smart-Home Integration |
+| “It warned me when something looked off with my HVAC and reminded me about filters.” | 1) Proactive system monitoring with timely alerts; 2) Adjustable maintenance reminders. | Explicit (positive) | Reliability &amp; Maintenance |
+| “Looks clean; the Snow finish blends in and the display is easy to read.” | 1) Minimal, modern design that fits decor; 2) Readable screen from typical viewing distance. | Explicit (positive) | Aesthetics |
+| “ENERGY STAR certified—nice to know it’s efficient.” | 1) Verified efficiency to reduce waste; 2) Clear guidance on energy programs/rebates where available. | Explicit (positive) | Energy Efficiency |
+| “My setup needed a C-wire/Power Connector—battery kept dipping without it.” | 1) Clear guidance on when extra power is required; 2) Stable power across diverse HVAC systems. | Explicit (negative) | Compatibility &amp; Power |
+| “Not compatible with high-voltage (line-voltage) systems in older homes.” | 1) Transparent compatibility limits up front; 2) Suggested alternatives or adapters when unsupported. | Explicit (negative) | System Compatibility |
+| “You need a Google account and working Wi-Fi for the smart stuff.” | 1) Transparent prerequisites (account/Wi-Fi) before purchase; 2) Reliable connectivity once set up. | Explicit (negative) | Onboarding &amp; Connectivity |
+| “It uses AAA batteries, so I’ll have to replace them occasionally.” | 1) Reasonable battery life with clear low-battery alerts; 2) Simple, tool-free battery replacement. | Explicit (negative) | Power Convenience |</p>
 <p><strong>Category / Meta-Needs:</strong><br>
 - <strong>Home Climate Control and Energy Management</strong> — <em>Maintain satisfactory temperatures while cutting waste with easy app usage, system monitoring, and compatibility.</em></p>
 <h2 id="consolidated-need-categories-meta-needs">Consolidated Need Categories &amp; Meta-Needs</h2>
