--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1075,6 +1075,85 @@
 </thead>
 <tbody>
 <tr>
+<td>“HD+ ‘head-to-toe’ video makes it easy to see faces and packages.”</td>
+<td>1) Deliver crisp 1536p video; 2) Provide a tall field of view for full-body/package visibility.</td>
+<td>Explicit (positive)</td>
+<td>Video Quality &amp; Coverage</td>
+</tr>
+<tr>
+<td>“Color night vision and Live View let me clearly check my porch after dark.”</td>
+<td>1) Maintain clear nighttime visibility; 2) Enable real-time viewing on demand.</td>
+<td>Explicit (positive)</td>
+<td>Night Monitoring</td>
+</tr>
+<tr>
+<td>“Two-way talk and Quick Replies help me handle visitors when I’m busy.”</td>
+<td>1) Support clear, reliable two-way audio; 2) Offer quick auto-responses to save time.</td>
+<td>Explicit (positive)</td>
+<td>Communication</td>
+</tr>
+<tr>
+<td>“Works with Alexa—I get door announcements and can view on Echo Show.”</td>
+<td>1) Integrate smoothly with Alexa devices; 2) Provide audible/visual door announcements indoors.</td>
+<td>Explicit (positive)</td>
+<td>Smart-Home Integration</td>
+</tr>
+<tr>
+<td>“Battery-powered with a quick-release pack; you can also hardwire if you have a transformer.”</td>
+<td>1) Offer flexible power options; 2) Make battery swaps/charging simple to minimize hassle.</td>
+<td>Explicit (positive)</td>
+<td>Power Flexibility</td>
+</tr>
+<tr>
+<td>“You need a subscription to save/review recordings and for Package Alerts after the trial.”</td>
+<td>1) Be transparent about ongoing costs; 2) Preserve basic functionality without a plan.</td>
+<td>Explicit (negative)</td>
+<td>Ownership Cost Transparency</td>
+</tr>
+<tr>
+<td>“Only connects to 2.4 GHz Wi-Fi and needs decent upload speed.”</td>
+<td>1) Clearly state Wi-Fi band and speed requirements; 2) Maintain a stable connection at those specs.</td>
+<td>Explicit (negative)</td>
+<td>Connectivity</td>
+</tr>
+<tr>
+<td>“If the battery runs down, the doorbell’s offline until I recharge or swap a spare.”</td>
+<td>1) Minimize downtime during charging; 2) Support easy spare-battery swapping.</td>
+<td>Latent (negative)</td>
+<td>Uptime &amp; Convenience</td>
+</tr>
+<tr>
+<td>“For in-home chime sounds, use an existing wired chime or add a Ring Chime.”</td>
+<td>1) Provide clear chime compatibility options; 2) Ensure audible alerts around the home.</td>
+<td>Explicit (neutral)</td>
+<td>Accessory Compatibility</td>
+</tr>
+<tr>
+<td>“Not compatible with 5 GHz Wi-Fi.”</td>
+<td>1) Make compatibility limits clear up front; 2) Offer setup guidance for 2.4 GHz networks.</td>
+<td>Explicit (negative)</td>
+<td>System Compatibility</td>
+</tr>
+</tbody>
+</table>
+<p><strong>Category / Meta-Needs:</strong><br>
+- <strong>Home Monitoring and Security</strong> — <em>See/communicate with visitors, receive dependable alerts, capture package deliveries.</em>
+- <strong>Ease of Use and Power</strong> — <em>Simple setup with strong battery performance in real world conditions.</em></p>
+<h3 id="5-programmable-hvac-monitoring-thermostat-walmart">5) Programmable HVAC Monitoring Thermostat - Walmart</h3>
+<p><strong>Search keywords:</strong> <code>hvac thermostat smart household programmable</code><br>
+<strong>Search link:</strong> <a href="https://www.walmart.com/ip/Google-Nest-Thermostat-Programmable-Smart-Thermostat-for-Home-Snow/415911305?wmlspartner=wlpa&amp;selectedSellerId=102477550">Google Nest Thermostat</a></p>
+<p><strong>Voice of the Customer → User Needs</strong></p>
+<table>
+<thead>
+<tr>
+<th>Statements (summarized quotes)</th>
+<th>User Need Statement</th>
+<th>Explicit/Latent</th>
+<th>Meta Need</th>
+</tr>
+</thead>
+<tbody>
+<tr>
 <td>“Eco Temps kick in when I’m away and my bill dropped.”</td>
 <td>1) Automatically reduce energy use when home is unoccupied; 2) Make Eco settings easy to enable and trust.</td>
 <td>Explicit (positive)</td>
@@ -1136,24 +1215,6 @@
 </tr>
 </tbody>
 </table>
-<p><strong>Category / Meta-Needs:</strong><br>
-- <strong>Home Monitoring and Security</strong> — <em>See/communicate with visitors, receive dependable alerts, capture package deliveries.</em>
-- <strong>Ease of Use and Power</strong> — <em>Simple setup with strong battery performance in real world conditions.</em></p>
-<h3 id="5-programmable-hvac-monitoring-thermostat-walmart">5) Programmable HVAC Monitoring Thermostat - Walmart</h3>
-<p><strong>Search keywords:</strong> <code>hvac thermostat smart household programmable</code><br>
-<strong>Search link:</strong> <a href="https://www.walmart.com/ip/Google-Nest-Thermostat-Programmable-Smart-Thermostat-for-Home-Snow/415911305?wmlspartner=wlpa&amp;selectedSellerId=102477550">Google Nest Thermostat</a></p>
-<p><strong>Voice of the Customer → User Needs</strong></p>
-<p>| Statements (summarized quotes) | User Need Statement | Explicit/Latent | Meta Need |
-| “Eco Temps kick in when I’m away and my bill dropped.” | 1) Automatically reduce energy use when home is unoccupied; 2) Make Eco settings easy to enable and trust. | Explicit (positive) | Energy Savings |
-| “I can change the temp and edit schedules in the Google Home app from anywhere.” | 1) Reliable remote control; 2) Fast, tweakable scheduling in one place. | Explicit (positive) | Ease of Use |
-| “Voice control works—‘Hey Google, set it to 72.’” | 1) Hands-free temperature changes via voice; 2) Consistent assistant responses without lag. | Explicit (positive) | Smart-Home Integration |
-| “It warned me when something looked off with my HVAC and reminded me about filters.” | 1) Proactive system monitoring with timely alerts; 2) Adjustable maintenance reminders. | Explicit (positive) | Reliability &amp; Maintenance |
-| “Looks clean; the Snow finish blends in and the display is easy to read.” | 1) Minimal, modern design that fits decor; 2) Readable screen from typical viewing distance. | Explicit (positive) | Aesthetics |
-| “ENERGY STAR certified—nice to know it’s efficient.” | 1) Verified efficiency to reduce waste; 2) Clear guidance on energy programs/rebates where available. | Explicit (positive) | Energy Efficiency |
-| “My setup needed a C-wire/Power Connector—battery kept dipping without it.” | 1) Clear guidance on when extra power is required; 2) Stable power across diverse HVAC systems. | Explicit (negative) | Compatibility &amp; Power |
-| “Not compatible with high-voltage (line-voltage) systems in older homes.” | 1) Transparent compatibility limits up front; 2) Suggested alternatives or adapters when unsupported. | Explicit (negative) | System Compatibility |
-| “You need a Google account and working Wi-Fi for the smart stuff.” | 1) Transparent prerequisites (account/Wi-Fi) before purchase; 2) Reliable connectivity once set up. | Explicit (negative) | Onboarding &amp; Connectivity |
-| “It uses AAA batteries, so I’ll have to replace them occasionally.” | 1) Reasonable battery life with clear low-battery alerts; 2) Simple, tool-free battery replacement. | Explicit (negative) | Power Convenience |</p>
 <p><strong>Category / Meta-Needs:</strong><br>
 - <strong>Home Climate Control and Energy Management</strong> — <em>Maintain satisfactory temperatures while cutting waste with easy app usage, system monitoring, and compatibility.</em></p>
 <h2 id="consolidated-need-categories-meta-needs">Consolidated Need Categories &amp; Meta-Needs</h2>
