deploy: f9725ba627b804081314a330df303b9df5573b2d

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -900,7 +900,7 @@
 <h2 id="product-mission-statement">Product Mission Statement</h2>
 <p>Our mission is to design and deliver a reliable smart home system that enhances daily living by improving <strong>comfort, security, and energy efficiency</strong>. We will analyze existing smart home products, incorporate user feedback, and leverage our team’s strengths to build an <strong>accessible, maintainable, and user-friendly</strong> solution that meets real-world needs.</p>
 <h2 id="benchmarking-method-voc">Benchmarking Method (VOC)</h2>
-<p>-</p>
+<p>We conducted benchmarking using Amazon, Best Buy, and Walmart product listings. Searches included terms such as “clap light smart lamp,” “smart blinds motorized window shade,” “robot vacuum mop lidar,” “wifi doorbell smart camera,” and “programmable HVAC thermostat.” For each product, we selected those with a high volume of reviews and examined both positive (4–5★) and negative (1–2★) feedback. Common themes were extracted from the reviews and translated into user need statements. Each need was categorized as explicit (directly stated) or latent (implied by user expectations). These needs were then grouped into categories, summarized with meta-needs, and prioritized by frequency, impact, and team judgment.</p>
 <h2 id="benchmarked-products-overview">Benchmarked Products (overview)</h2>
 <ul>
 <li><a href="https://www.amazon.com/Control-Bedroom-Activated-Solution-Detection/dp/B0CVVBYG4R/">Clap Light</a></li>
