deploy: cc4ebec9b00874524c70c3cc6728f88b13a7b672

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1247,11 +1247,11 @@
 </blockquote>
 <h2 id="prioritized-top-needs">Prioritized Top Needs</h2>
 <ol>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<li>Performance</li>
+<li>User interaction</li>
+<li>Reliability</li>
+<li>Convenience</li>
+<li>Maintainence</li>
 </ol>
 <blockquote>
 <p><strong>Ranking method:</strong> frequency in reviews (quantified counts), impact on safety/utility, and team vote (weighted 50/30/20).</p>
