--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1243,7 +1243,7 @@
 - <strong>Home Climate Control and Energy Management</strong> — <em>Maintain satisfactory temperatures while cutting waste with easy app usage, system monitoring, and compatibility.</em></p>
 <h2 id="consolidated-need-categories-meta-needs">Consolidated Need Categories &amp; Meta-Needs</h2>
 <blockquote>
-<p><strong>Screenshots:</strong> Insert three images showing (1) all needs collected, (2) grouped by category, (3) ranked.</p>
+<p><strong>Screenshots:</strong> Insert three images showing (1) all needs collected <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="./image/Screenshot 2025-09-15 210305.png" data-desc-position="bottom"><img src="./image/Screenshot 2025-09-15 210305.png"></a>, (2) grouped by category, (3) ranked.</p>
 </blockquote>
 <h2 id="prioritized-top-needs">Prioritized Top Needs</h2>
 <ol>
