deploy: 94784920f42763289f6ff0084a2e7fb560a1f07d

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -920,6 +920,7 @@
 <th>Statements (summarized quotes)</th>
 <th>User Need Statement</th>
 <th>Explicit/Latent</th>
+<th>Meta Need</th>
 </tr>
 </thead>
 <tbody>
@@ -927,31 +928,37 @@
 <td>“I love how it turns off when I clap—I don’t have to get up.”</td>
 <td>The product reliably responds to hand claps to control the light.</td>
 <td>Explicit</td>
+<td>Simplistic</td>
 </tr>
 <tr>
 <td>“Works well but also reacts to speaking or other sounds.”</td>
 <td>The product distinguishes hand claps from other noises.</td>
 <td>Explicit</td>
+<td>Audio Distinction</td>
 </tr>
 <tr>
 <td>“It turned on during phone calls / when people spoke.”</td>
 <td>The product avoids false triggers from voices/background noise.</td>
 <td>Explicit</td>
+<td>Audio Distinction</td>
 </tr>
 <tr>
 <td>“Goes on and off when I’m just talking or laughing.”</td>
 <td>The product maintains accuracy by not confusing claps with speech/laughter.</td>
 <td>Explicit</td>
+<td>Audio Distinction</td>
 </tr>
 <tr>
 <td>“Does not respond consistently to claps.”</td>
 <td>The product responds consistently to clapping gestures.</td>
 <td>Explicit</td>
+<td>reliability</td>
 </tr>
 <tr>
 <td>“Almost every noise sets it off—really annoying.”</td>
 <td>The product filters irrelevant noise to minimize unwanted activations.</td>
 <td>Explicit</td>
+<td>Reliability</td>
 </tr>
 </tbody>
 </table>
