deploy: e1059fdd43e5639f9dbd06dfc4b048b33ffea8bd

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -952,7 +952,7 @@
 <td>“Does not respond consistently to claps.”</td>
 <td>The product responds consistently to clapping gestures.</td>
 <td>Explicit</td>
-<td>reliability</td>
+<td>Reliability</td>
 </tr>
 <tr>
 <td>“Almost every noise sets it off—really annoying.”</td>
@@ -974,6 +974,7 @@
 <th>Statements (summarized quotes)</th>
 <th>User Need Statement</th>
 <th>Explicit/Latent</th>
+<th>Meta Need</th>
 </tr>
 </thead>
 <tbody>
@@ -981,31 +982,37 @@
 <td>“Very easy to install and works flawlessly. Easy to program down motion if needed.”</td>
 <td>The product should allow simple, user-friendly installation and programming.</td>
 <td>Latent</td>
+<td>Setup &amp; Integration</td>
 </tr>
 <tr>
 <td>“Love the blind. Works well. It is too long for most windows… I control it for the evening while I set up a timer for the morning.”</td>
 <td>The product should adapt to different window sizes and allow scheduled automation.</td>
 <td>Latent</td>
+<td>User interaction</td>
 </tr>
 <tr>
 <td>“Easy install. No drill required unless you want to secure it more. Quiet motorized shade… Comes with extra spacers for adjusting.”</td>
 <td>The product should be quiet, adjustable, and powered conveniently.</td>
 <td>Latent</td>
+<td>Setup &amp; Integration</td>
 </tr>
 <tr>
 <td>“Like the product but 2 of my 3 shades have pin holes… noticeable on blackout shades.”</td>
 <td>The product should maintain consistent build quality with no light leakage.</td>
 <td>Latent</td>
+<td>Performmance</td>
 </tr>
 <tr>
 <td>“Bought these because Alexa said they could open/close on a schedule… not the case. No option in the app.”</td>
 <td>The product should support scheduling directly through the app without extra hardware.</td>
 <td>Latent</td>
+<td>Compatability</td>
 </tr>
 <tr>
 <td>“Comes with regular battery drain issue. Motor sound bit loud then other times.”</td>
 <td>The product should have long-lasting battery life and **consistent, quiet operation.</td>
 <td>Latent</td>
+<td>Maintainence</td>
 </tr>
 </tbody>
 </table>
