deploy: cf1d64305ca7f18b8ad18e92db9e5699ef3ec33c

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -925,6 +925,18 @@
 </thead>
 <tbody>
 <tr>
+<td>"Noise sensitivity may need adjustments" "</td>
+<td>The product settings can be adjusted.</td>
+<td>Explicit</td>
+<td>User interaction</td>
+</tr>
+<tr>
+<td>"It was super easy to install. It comes with directions but you really don't need to read them. Just screw it in and start clapping. It brought some applause to our house."</td>
+<td>The product is easy to setup</td>
+<td>Explicit</td>
+<td>Setup &amp; Integration</td>
+</tr>
+<tr>
 <td>“I love how it turns off when I clap—I don’t have to get up.”</td>
 <td>The product reliably responds to hand claps to control the light.</td>
 <td>Explicit</td>
@@ -947,6 +959,18 @@
 <td>The product maintains accuracy by not confusing claps with speech/laughter.</td>
 <td>Explicit</td>
 <td>Audio Distinction</td>
+</tr>
+<tr>
+<td>"Unfortunately arrived broken, unable to use at all."</td>
+<td>The product is durable and packaged securely.</td>
+<td>Latent</td>
+<td>Convenience</td>
+</tr>
+<tr>
+<td>"I,have worked and worked with this bulb to get it to work and it still won’t do as advertised"</td>
+<td>The product requires little to no knowledge to setup.</td>
+<td>latent</td>
+<td>Setup &amp; Configuration</td>
 </tr>
 <tr>
 <td>“Does not respond consistently to claps.”</td>
@@ -982,7 +1006,7 @@
 <td>“Very easy to install and works flawlessly. Easy to program down motion if needed.”</td>
 <td>The product should allow simple, user-friendly installation and programming.</td>
 <td>Latent</td>
-<td>Setup &amp; Integration</td>
+<td>Setup &amp; Configuration</td>
 </tr>
 <tr>
 <td>“Love the blind. Works well. It is too long for most windows… I control it for the evening while I set up a timer for the morning.”</td>
@@ -994,7 +1018,7 @@
 <td>“Easy install. No drill required unless you want to secure it more. Quiet motorized shade… Comes with extra spacers for adjusting.”</td>
 <td>The product should be quiet, adjustable, and powered conveniently.</td>
 <td>Latent</td>
-<td>Setup &amp; Integration</td>
+<td>Setup &amp; Configuration</td>
 </tr>
 <tr>
 <td>“Like the product but 2 of my 3 shades have pin holes… noticeable on blackout shades.”</td>
