deploy: 96bd763c08acd8e111f47ad3553094ee86e4ba12

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1021,6 +1021,18 @@
 <td>Setup &amp; Configuration</td>
 </tr>
 <tr>
+<td>"I like them because you can make a lot of adjustments individually and separate them on different channels so you could open blinds in one area of the house while closing blinds in another area of the house etc. You can also alter the length that they come down if you have a shorter window or door that you have the blinds affixed to."</td>
+<td>The product is highly configurable and easy to use</td>
+<td>Explicit</td>
+<td>Smart Home Integration</td>
+</tr>
+<tr>
+<td>"these work good. get the master controller if you get more than one."</td>
+<td>The product works well when setup with multiple products.</td>
+<td>Explicit</td>
+<td>Convenient</td>
+</tr>
+<tr>
 <td>“Like the product but 2 of my 3 shades have pin holes… noticeable on blackout shades.”</td>
 <td>The product should maintain consistent build quality with no light leakage.</td>
 <td>Latent</td>
@@ -1037,6 +1049,18 @@
 <td>The product should have long-lasting battery life and **consistent, quiet operation.</td>
 <td>Latent</td>
 <td>Maintainence</td>
+</tr>
+<tr>
+<td>"Difficult to control unless using remote control. I purchased three shades and didn't want to have to take out all three controllers each time I wanted to adjust my shades. I contacted the manufacturer but the customer support was useless"</td>
+<td>The product is simple utalize and configure.</td>
+<td>Latent</td>
+<td>Convenient</td>
+</tr>
+<tr>
+<td>"I measured my window 29inches. What I received doesn’t even start to fit it. Even the extension blocks didn’t help."</td>
+<td>The product can adjust size for convenience.</td>
+<td>Latent</td>
+<td>Smart Home Integration</td>
 </tr>
 </tbody>
 </table>
