deploy: c10a49d85dee00fcb5a56691c224c8e5f7821c08

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -896,11 +896,11 @@
   <h1>User Needs and Benchmarking</h1>
 
 <h2 id="introduction">Introduction</h2>
-<p>This page documents how our team identified and prioritized user needs for a <strong>smart home system</strong> by benchmarking existing products and analyzing voice-of-the-customer (VOC) reviews. We summarize our method, product set, extracted needs, meta-needs, and the final prioritized list that will guide our requirements.</p>
+<p>This page documents how our team identified and prioritized user needs for a smart home system by benchmarking existing products and analyzing voice-of-the-customer (VOC) reviews. We summarize our method, product set, extracted needs, meta-needs, and the final prioritized list that will guide our requirements.</p>
 <h2 id="product-mission-statement">Product Mission Statement</h2>
-<p>Our mission is to design and deliver a reliable smart home system that enhances daily living by improving <strong>comfort, security, and energy efficiency</strong>. We will analyze existing smart home products, incorporate user feedback, and leverage our team’s strengths to build an <strong>accessible, maintainable, and user-friendly</strong> solution that meets real-world needs.</p>
+<p>Our mission is to design and deliver a reliable smart home system that enhances daily living by improving comfort, security, and energy efficiency. We will analyze existing smart home products, incorporate user feedback, and leverage our team’s strengths to build an accessible, maintainable, and user-friendly solution that meets real-world needs.</p>
 <h2 id="benchmarking-method-voc">Benchmarking Method (VOC)</h2>
-<p>We conducted benchmarking using Amazon, Best Buy, and Walmart product listings. Searches included terms such as “clap light smart lamp,” “smart blinds motorized window shade,” “robot vacuum mop lidar,” “wifi doorbell smart camera,” and “programmable HVAC thermostat.” For each product, we selected those with a high volume of reviews and examined both positive (4–5★) and negative (1–2★) feedback. Common themes were extracted from the reviews and translated into user need statements. Each need was categorized as explicit (directly stated) or latent (implied by user expectations). These needs were then grouped into categories, summarized with meta-needs, and prioritized by frequency, impact, and team judgment.</p>
+<p>We conducted benchmarking using Amazon, Best Buy, and Walmart product listings. Searches included terms such as “clap light smart lamp,” “smart blinds motorized window shade,” “robot vacuum mop lidar,” “wifi doorbell smart camera,” and “programmable HVAC thermostat.” For each product, we selected those with a high volume of reviews and examined both positive and negative feedback. Common themes were extracted from the reviews and translated into user need statements. Each need was categorized as explicit (directly stated) or latent (implied by user expectations). These needs were then grouped into categories, summarized with meta-needs, and prioritized by frequency, impact, and team judgment.</p>
 <h2 id="benchmarked-products-overview">Benchmarked Products (overview)</h2>
 <ul>
 <li><a href="https://www.amazon.com/Control-Bedroom-Activated-Solution-Detection/dp/B0CVVBYG4R/">Clap Light</a></li>
@@ -987,7 +987,7 @@
 </tbody>
 </table>
 <p><strong>Category / Meta-Need:</strong><br>
-- <strong>User Interaction</strong> — <em>Recognize intended clap actions while ignoring background sounds.</em></p>
+- <strong>User Interaction</strong> — Recognize intended clap actions while ignoring background sounds.</p>
 <h3 id="2-smart-blinds-amazon">2) Smart Blinds — Amazon</h3>
 <p><strong>Search keywords:</strong> <code>smart blinds motorized window shade</code><br>
 <strong>Search link:</strong> <a href="amazon.com/MANSNIX-Motorized-Blackout-Automatic-Compatible/dp/B0B5X1DHWZ/ref=cm_cr_arp_d_product_top?ie=UTF8">Amazon - Smart Blinds</a></p>
@@ -1065,9 +1065,9 @@
 </tbody>
 </table>
 <p><strong>Category / Meta-Needs:</strong><br>
-- <strong>Power</strong> — <em>Remain reliably powered through simple conventions (long battery life, easy replacement).</em><br>
-- <strong>User Interaction</strong> — <em>Require little to no setup while providing flexible automation (scheduling, app integration).</em><br>
-- <strong>Quality</strong> — <em>Deliver consistent performance and durable build with no defects.</em></p>
+- <strong>Power</strong> — Remain reliably powered through simple conventions (long battery life, easy replacement). 
+- <strong>User Interaction</strong> — Require little to no setup while providing flexible automation (scheduling, app integration).
+- <strong>Quality</strong> — Deliver consistent performance and durable build with no defects.</p>
 <h3 id="3-robot-vacuum-mop-amazon">3) Robot Vacuum &amp; Mop — Amazon</h3>
 <p><strong>Search keywords:</strong> <code>robot vacuum mop lidar smart home</code><br>
 <strong>Search link:</strong> <a href="https://www.amazon.com/Mapping-Robotic-Navigation-Obstacle-Avoidance/dp/B0FGXQPQ8G">Amazon - Robot Vacuum and Mop</a></p>
@@ -1145,7 +1145,7 @@
 </tbody>
 </table>
 <p><strong>Category / Meta-Need:</strong><br>
-- <strong>Automation &amp; Cleaning</strong> — <em>Automates floor cleaning with strong suction, reliable navigation, and smart integration for minimal user effort.</em></p>
+- <strong>Automation &amp; Cleaning</strong> — Automates floor cleaning with strong suction, reliable navigation, and smart integration for minimal user effort.</p>
 <h3 id="4-battery-doorbell-plus-smart-wifi-doorbell-best-buy">4) Battery Doorbell Plus Smart Wifi Doorbell - Best Buy</h3>
 <p><strong>Search keywords:</strong> <code>camera door doorbell smart household wifi</code><br>
 <strong>Search link:</strong> <a href="https://www.bestbuy.com/product/ring-battery-doorbell-plus-smart-wifi-video-doorbell-battery-operated-with-head-to-toe-view-satin-nickel/J39HW6P9S2/sku/6531758?extStoreId=1189">Best Buy - Ring Wifi Doorbell</a></p>
@@ -1223,8 +1223,8 @@
 </tbody>
 </table>
 <p><strong>Category / Meta-Needs:</strong><br>
-- <strong>Home Monitoring and Security</strong> — <em>See/communicate with visitors, receive dependable alerts, capture package deliveries.</em>
-- <strong>Ease of Use and Power</strong> — <em>Simple setup with strong battery performance in real world conditions.</em></p>
+- <strong>Home Monitoring and Security</strong> — See/communicate with visitors, receive dependable alerts, capture package deliveries.
+- <strong>Ease of Use and Power</strong> — Simple setup with strong battery performance in real world conditions.</p>
 <h3 id="5-programmable-hvac-monitoring-thermostat-walmart">5) Programmable HVAC Monitoring Thermostat - Walmart</h3>
 <p><strong>Search keywords:</strong> <code>hvac thermostat smart household programmable</code><br>
 <strong>Search link:</strong> <a href="https://www.walmart.com/ip/Google-Nest-Thermostat-Programmable-Smart-Thermostat-for-Home-Snow/415911305?wmlspartner=wlpa&amp;selectedSellerId=102477550">Google Nest Thermostat</a></p>
@@ -1302,7 +1302,7 @@
 </tbody>
 </table>
 <p><strong>Category / Meta-Needs:</strong><br>
-- <strong>Home Climate Control and Energy Management</strong> — <em>Maintain satisfactory temperatures while cutting waste with easy app usage, system monitoring, and compatibility.</em></p>
+- <strong>Home Climate Control and Energy Management</strong> — Maintain satisfactory temperatures while cutting waste with easy app usage, system monitoring, and compatibility.</p>
 <h2 id="consolidated-need-categories-meta-needs">Consolidated Need Categories &amp; Meta-Needs</h2>
 <blockquote>
 <p><strong>Screenshots:</strong> Insert three images showing (1) all needs collected <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="./image/Screenshot 2025-09-15 210305.png" data-desc-position="bottom"><img src="./image/Screenshot 2025-09-15 210305.png"></a>, (2) grouped by category <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="./image/Screenshot 2025-09-15 210923.png" data-desc-position="bottom"><img src="./image/Screenshot 2025-09-15 210923.png"></a>, (3) ranked <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="./image/Screenshot 2025-09-15 211207.png" data-desc-position="bottom"><img src="./image/Screenshot 2025-09-15 211207.png"></a>.</p>
