deploy: 3a4c97f5ca90982c31cf8a9318463cc4b9045e84

--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -1305,7 +1305,13 @@
 - <strong>Home Climate Control and Energy Management</strong> — Maintain satisfactory temperatures while cutting waste with easy app usage, system monitoring, and compatibility.</p>
 <h2 id="consolidated-need-categories-meta-needs">Consolidated Need Categories &amp; Meta-Needs</h2>
 <blockquote>
-<p><strong>Screenshots:</strong> Insert three images showing (1) all needs collected <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="./image/Screenshot 2025-09-15 210305.png" data-desc-position="bottom"><img src="./image/Screenshot 2025-09-15 210305.png"></a>, (2) grouped by category <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="./image/Screenshot 2025-09-15 210923.png" data-desc-position="bottom"><img src="./image/Screenshot 2025-09-15 210923.png"></a>, (3) ranked <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="./image/Screenshot 2025-09-15 211207.png" data-desc-position="bottom"><img src="./image/Screenshot 2025-09-15 211207.png"></a>.</p>
+<p><strong>Screenshots:</strong> Insert three images showing<br>
+1) all needs collected<br>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20210305.png" data-desc-position="bottom"><img alt="All Needs" src="../image/Screenshot%202025-09-15%20210305.png"></a><br>
+2) grouped by category<br>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20210923.png" data-desc-position="bottom"><img alt="Grouped Needs" src="../image/Screenshot%202025-09-15%20210923.png"></a><br>
+3) ranked<br>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/Screenshot%202025-09-15%20211207.png" data-desc-position="bottom"><img alt="Ranked Needs" src="../image/Screenshot%202025-09-15%20211207.png"></a></p>
 </blockquote>
 <h2 id="prioritized-top-needs">Prioritized Top Needs</h2>
 <ol>
