deploy: daaccac8d063e39d85bc3f4115b1d947f2d0a57a

--- a/04-Product-Requirements/index.html
+++ b/04-Product-Requirements/index.html
@@ -787,11 +787,11 @@ Our system will reliably tell the difference between a real clap and background 
 <li><strong>Retailers</strong> Prefer products that can withstand a wide range of storage conditions including variations in temperature, vibration, humidity, and atmospheric pressure, and have a strong and compact, theft, and vandalism-proof packaging.</li>
 </ul>
 <h2 id="use-cases">Use Cases</h2>
-<p><strong>User Story #1: Jesus</strong>
-Jesus is a senior who values simplicity and independence in his daily routine. He recently purchased a clap-activated device, and it turned out to be exactly what he needed. Now, with just a clap of his hands, he can easily turn the device on or off without having to fumble for switches.</p>
+<p><strong>User Story #1: Jesus</strong></p>
+<p>Jesus is a senior who values simplicity and independence in his daily routine. He recently purchased a clap-activated device, and it turned out to be exactly what he needed. Now, with just a clap of his hands, he can easily turn the device on or off without having to fumble for switches.</p>
 <p>For Jesus, this small feature makes a big difference, especially in his senior years. It gives him a sense of control and convenience, reducing the hassle of bending over or reaching for hard-to-access buttons. He feels grateful for how straightforward and effective the device is, and he finds joy in the fact that it works seamlessly for his needs.</p>
-<p><strong>User Story #2: Arleta</strong>
-Arleta is someone who values convenience and ease in her daily life. She often found herself frustrated by having to constantly get up just to turn things off. That small but repeated hassle wore her down over time.</p>
+<p><strong>User Story #2: Arleta</strong></p>
+<p>Arleta is someone who values convenience and ease in her daily life. She often found herself frustrated by having to constantly get up just to turn things off. That small but repeated hassle wore her down over time.</p>
 <p>With her new clap-activated device, everything changed. Now, a simple clap of her hands allows her to control it without leaving her spot. She loves the newfound freedom and simplicity—it feels empowering to handle things effortlessly. For Arleta, this small feature means less interruption in her day and more comfort in her home.</p>
 <h2 id="aspects">Aspects</h2>
 <p>The new product design will be based on that of the AirPods with improvements based on the following requirements. The <strong>P1 - P10</strong> is the "code" to indicate the priority of the requirement, from low to high.</p>
