--- a/04-Product-Requirements/index.html
+++ b/04-Product-Requirements/index.html
@@ -794,26 +794,61 @@
 <p>Arleta is someone who values convenience and ease in her daily life. She often found herself frustrated by having to constantly get up just to turn things off. That small but repeated hassle wore her down over time.</p>
 <p>With her new clap-activated device, everything changed. Now, a simple clap of her hands allows her to control it without leaving her spot. She loves the newfound freedom and simplicity—it feels empowering to handle things effortlessly. For Arleta, this small feature means less interruption in her day and more comfort in her home.</p>
 <h2 id="aspects">Aspects</h2>
-<p>The new product design will be based on that of the AirPods with improvements based on the following requirements. The <strong>P1 - P10</strong> is the "code" to indicate the priority of the requirement, from low to high.</p>
 <ol>
-<li><strong>Producr Design</strong></li>
-<li>1.1 The product shall be visually easy to distinguish from existing AirPods as well as main competitors Sony WF-1000XM3, Jabra Elite, Amazon Echo Buds, Samsung Galaxy Buds, and Bose SoundSport Free, and Urbanista Stockholm. (P10)</li>
-<li>1.1 The product shall be easy to recognize as an Apple product without needing a logo on its exterior. (P10)</li>
 <li>
-<p>1.2. The product shall avoid styling elements from our Powerbeats over-ear wireless headphones since those address a different market segment. (P8)</p>
+<p><strong>Hardware / Product Design</strong></p>
+<ul>
+<li>LED</li>
+<li>PIC18F57Q43 Curiosity Nano Board</li>
+<li>Various resistors</li>
+<li>Wires</li>
+<li>Sound sensors</li>
+<li>Breadboard</li>
+<li>Curisity Nano Cable</li>
+</ul>
 </li>
 <li>
-<p><strong>Functionality</strong></p>
+<p><strong>Software / Functionality</strong></p>
 <ul>
-<li>2.1 The product shall incorporate one or more optical proximity sensors to detect the user wearing it. (P10)</li>
-<li>2.2 The product shall offer a dual microphone in each earbud. (P10)</li>
+<li>The product will have the implementation of Nano Board Coding</li>
+<li>The product shall have one sensor to detect the user.</li>
 </ul>
+</li>
+<li>
+<p><strong>User Experience</strong></p>
+<ul>
+<li>The product shall be easy to setup and implement</li>
+<li>The product will require the user to clap to toggle light</li>
+</ul>
+</li>
+<li>
+<p><strong>Customization</strong></p>
+<ul>
+<li>The product shall offer customizable decibel levels for detection</li>
+<li>The product shall offer customizable amounts of claps for toggling</li>
+<li>The product shall offer multiple different LED light colors.</li>
+</ul>
+</li>
+<li>
+<p><strong>Manufacturing</strong></p>
+<ul>
+<li>The product will be designed with circuitry on a breadboard.</li>
+<li>Functioning of the device shall be easy to assess by a manufacturing.</li>
+<li>The total cost price of the produce shall be &lt;$30.</li>
+<li>The product shall be designed to consist of the minimum possible amount of parts.</li>
+</ul>
+</li>
+<li>
+<p><strong>Safety</strong></p>
 </li>
 </ol>
 <h2 id="requirement-criteria-specifications">Requirement Criteria Specifications</h2>
 <ul>
-<li>1.1.1 - Regulate system power from 9 volts to 5 volts</li>
-<li>1.1.2 - Provide over-amperage project to not exceed 1.5 amps.</li>
+<li>
+<ol>
+<li>Regulate system power from 9 volts to 5 volts</li>
+</ol>
+</li>
 </ul>
 <h2 id="open-questions">Open Questions</h2>
 <ul>
