--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -772,12 +772,127 @@ cur, aut in adhuc crimina <strong>habebat</strong>: pro.</p>
 </thead>
 <tbody>
 <tr>
-<td style="text-align: right;">product provides clear notifications</td>
+<td style="text-align: right;">Performance</td>
 <td style="text-align: center;">buzzer</td>
 <td>the device provides different sounding tones and patterns for each function</td>
 </tr>
 <tr>
-<td style="text-align: right;">product provides clear notifications</td>
+<td style="text-align: right;">Performance</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Performance</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Performance</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Performance</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">User Interaction</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">User Interaction</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">User Interaction</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">User Interaction</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">User Interaction</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Reliability</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Reliability</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Reliability</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Reliability</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Reliability</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Convenience</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Convenience</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Convenience</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Convenience</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Convenience</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Maintenance</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Maintenance</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Maintenance</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Maintenance</td>
+<td style="text-align: center;">speaker</td>
+<td>the device can emit full waveforms</td>
+</tr>
+<tr>
+<td style="text-align: right;">Maintenance</td>
 <td style="text-align: center;">speaker</td>
 <td>the device can emit full waveforms</td>
 </tr>
