deploy: be1bc72260983b757f310296cae1368a4ea85741

--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -901,8 +901,10 @@ cur, aut in adhuc crimina <strong>habebat</strong>: pro.</p>
 <h2 id="step-three">Step Three</h2>
 <p>Add your context and tables</p>
 <h2 id="step-four">Step Four</h2>
-<p>Add your different product concepts stuff here
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="docs/image/ClapLight-mockup.png" data-desc-position="bottom"><img alt="Budget Clap Light" src="docs/image/ClapLight-mockup.png"></a></p>
+<p>Add your different product concepts stuff here</p>
+<blockquote>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="docs/image/ClapLight-mockup.png" data-desc-position="bottom"><img alt="Budget Clap Light" src="docs/image/ClapLight-mockup.png"></a></p>
+</blockquote>
 <h2 id="step-six-video-link">Step Six (video link)</h2>
 <p>Embedded a YouTube video that covers the </p>
 
