deploy: dc065bf5f5f43ae4209c2744042e372dc386b0b9

--- a/05-design-ideation/index.html
+++ b/05-design-ideation/index.html
@@ -1307,7 +1307,7 @@
 <p>Add your context and tables</p>
 <h3 id="smart-clap-light">Smart Clap Light</h3>
 <p>Modern design with app integration, touch controls, and voice assistant compatibility.
-<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="image/Screenshot%2025-09-26%105732.png" data-desc-position="bottom"><img alt="Smart Clap Light" src="image/Screenshot%2025-09-26%105732.png"></a></p>
+<a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/SmartClapLight.png" data-desc-position="bottom"><img alt="Smart Clap Light" src="../image/SmartClapLight.png"></a></p>
 <h3 id="accessible-clap-light">Accessible Clap Light</h3>
 <p>Senior-friendly design with large buttons, dimmable light, and safety features.
 <a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image/AccessibleLampLight.png" data-desc-position="bottom"><img alt="Accessible Clap Light" src="../image/AccessibleLampLight.png"></a></p>
