--- a/03-User-Needs-and Benchmarking/index.html
+++ b/03-User-Needs-and Benchmarking/index.html
@@ -275,7 +275,7 @@
   
     
   
-  Design Ideation
+  Ideation and Concept Generation
 
       </a>
     </li>
@@ -627,7 +627,7 @@
         
   
   <span class="md-ellipsis">
-    Design Ideation
+    Ideation and Concept Generation
   </span>
   
 
